PROJECT(utils)

ADD_SUBDIRECTORY(QtPropertyBrowser ${utils_BINARY_DIR}/QtPropertyBrowser)
ADD_SUBDIRECTORY(muParser ${utils_BINARY_DIR}/muParser)
ADD_SUBDIRECTORY(muParserX ${utils_BINARY_DIR}/muParserX)
ADD_SUBDIRECTORY(NMVtk ${utils_BINARY_DIR}/NMVtk)
ADD_SUBDIRECTORY(WrapperTemplates ${mfw_BINARY_DIR}/WrapperTemplates)
ADD_SUBDIRECTORY(SQLite ${utils_BINARY_DIR}/SQLite)
ADD_SUBDIRECTORY(NMQt ${utils_BINARY_DIR}/NMQt)
