PROJECT(LumassBMITest)

cmake_minimum_required(VERSION 3.10)

SET(EXECUTABLE_OUTPUT_PATH ${LumassBMITest_BINARY_DIR})

INCLUDE_DIRECTORIES(
	${LumassBMITest_SOURCE_DIR}
)

ADD_EXECUTABLE(LumassBMITest ${LumassBMITest_SOURCE_DIR}/LumassBMITest.cpp)
if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
	TARGET_LINK_LIBRARIES(LumassBMITest dl)
endif()

SET(BMITESTFILES
    ${LumassBMITest_SOURCE_DIR}/LumassBMIConfigTemplate.yaml
)

install(TARGETS LumassBMITest DESTINATION ${CMAKE_INSTALL_PREFIX})
install(FILES ${BMITESTFILES} DESTINATION ${CMAKE_INSTALL_PREFIX})

